--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -50,6 +50,7 @@
     "@mui/x-data-grid-pro": "^5.17.9",
     "@mui/x-date-pickers": "^5.0.6",
     "@mui/x-date-pickers-pro": "^5.0.6",
+    "@next/bundle-analyzer": "^13.0.1",
     "@prisma/client": "^4.5.0",
     "@sentry/nextjs": "^7.17.2",
     "@swc/wasm": "^1.3.11",
