--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,6 +130,8 @@ jobs:
   test_static:
     <<: *defaults
     resource_class: large
+    environment:
+      - NODE_OPTIONS: '--max-old-space-size=10240'
     steps:
       - checkout
       - install_js
