[core] Remove default access to GitHub action scopes
Fix equivalent issue to https://github.com/mui/material-ui/security/code-scanning/35

--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -15,6 +15,8 @@ on:
       - next
     types: [synchronize]
 
+permissions: {}
+
 jobs:
   main:
     # l10nbot creates a lot of commits at once which starves CI.
