--- a/.github/workflows/no-response.yml
+++ b/.github/workflows/no-response.yml
@@ -9,6 +9,8 @@ on:
     # Schedule for five minutes after the hour, every hour
     - cron: '5 * * * *'
 
+permissions: {}
+
 jobs:
   noResponse:
     runs-on: ubuntu-latest
