--- a/docs/package.json
+++ b/docs/package.json
@@ -28,7 +28,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
-    "@mui/monorepo": "https://github.com/mui/material-ui.git",
+    "@mui/monorepo": "https://github.com/mnajdova/material-ui.git#docs/upgrade-nextjs-13",
     "@mui/styles": "^5.10.10",
     "@mui/utils": "^5.10.9",
     "@trendmicro/react-interpolate": "^0.5.5",
@@ -60,7 +60,7 @@
     "lz-string": "^1.4.4",
     "markdown-to-jsx": "^7.1.7",
     "marked": "^4.2.2",
-    "next": "12.2.2",
+    "next": "13.0.2",
     "next-transpile-modules": "^10.0.0",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.18",
