--- a/renovate.json
+++ b/renovate.json
@@ -23,12 +23,12 @@
     {
       "groupName": "MUI Core",
       "matchPackagePatterns": ["^@mui/"],
-      "prCreation": "immediate"
+      "schedule": ["at any time"]
     },
     {
       "groupName": "MUI X",
       "matchPackagePatterns": ["^@mui/x-"],
-      "prCreation": "immediate"
+      "schedule": ["at any time"]
     },
     {
       "groupName": "playwright",
@@ -86,7 +86,7 @@
   "schedule": "on sunday before 6:00am",
   "timezone": "UTC",
   "vulnerabilityAlerts": {
-    "prCreation": "immediate",
+    "schedule": ["at any time"],
     "addLabels": ["priority: important"]
   },
   "regexManagers": [
