[core] Try running integration tests against self-hosted httpbin (#1253)

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -23,3 +23,8 @@ services:
         max-file: '3'
     expose:
       - '5432'
+
+  httpbin:
+    image: kennethreitz/httpbin
+    ports:
+      - '80'
