--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -94,6 +94,7 @@
     "prisma": "^4.5.0",
     "quickjs-emscripten": "^0.21.0",
     "react": "^18.2.0",
+    "react-arborist": "^2.1.0",
     "react-devtools-inline": "^4.26.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
