--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -81,6 +81,7 @@
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
     "monaco-editor": "0.34.1",
+    "mysql2": "^2.3.3",
     "next": "12.2.2",
     "node-fetch": "^2.6.7",
     "node-fetch-har": "^1.0.1",
