[core] Update renovate GitHub Action dependency updates

--- a/renovate.json
+++ b/renovate.json
@@ -77,6 +77,10 @@
     {
       "matchDepTypes": ["action"],
       "pinDigests": true
+    },
+    {
+      "groupName": ["github-actions"],
+      "matchManagers": ["github-actions"]
     }
   ],
   "postUpdateOptions": ["yarnDedupeHighest"],
