--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -81,7 +81,7 @@
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
     "monaco-editor": "0.34.1",
-    "next": "canary",
+    "next": "^13.0.3",
     "node-fetch": "^2.6.7",
     "node-fetch-har": "^1.0.1",
     "path-to-regexp": "^6.2.1",
@@ -130,7 +130,7 @@
     "@types/whatwg-url": "^11.0.0",
     "ajv": "^8.11.0",
     "eslint": "8.27.0",
-    "eslint-config-next": "^13.0.2",
+    "eslint-config-next": "^13.0.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "formidable": "^2.0.1",
