--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
     "markdownlint": "markdownlint-cli2 \"**/*.md\"",
     "prettier": "pretty-quick --ignore-path .eslintignore",
     "prettier:all": "prettier --write . --ignore-path .eslintignore",
-    "deduplicate": "node scripts/deduplicate.js",
+    "deduplicate": "node scripts/deduplicate.mjs",
     "start": "dotenv cross-env FORCE_COLOR=1 yarn workspace @mui/toolpad-app start",
     "dev": "dotenv cross-env FORCE_COLOR=1 lerna -- run dev --stream --parallel --scope @mui/toolpad-core --scope @mui/toolpad-components --scope @mui/toolpad-app",
     "docs:dev": "yarn workspace docs dev",
     "docs:build": "yarn workspace docs build",
     "docs:export": "yarn workspace docs export",
     "eslint": "eslint . --report-unused-disable-directives --ext .js,.ts,.tsx",
-    "jsonlint": "node ./scripts/jsonlint.js",
+    "jsonlint": "node ./scripts/jsonlint.mjs",
     "prisma": "dotenv yarn workspace @mui/toolpad-app run --cwd=\"./packages/toolpad-app\" prisma",
     "release:build": "lerna run --ignore docs --stream build",
     "release:version": "lerna version --no-changelog --no-push --no-git-tag-version",
     "release:docker": "dotenv -- node ./scripts/releaseDocker.mjs",
-    "release:changelog": "dotenv -- node ./scripts/releaseChangelog.js --repo mui-toolpad",
+    "release:changelog": "dotenv -- node ./scripts/releaseChangelog.mjs --repo mui-toolpad",
     "test:build": "lerna run build --scope @mui/toolpad-core --scope @mui/toolpad-components --stream",
     "test:integration": "playwright test --config ./test/integration/playwright.config.ts",
     "test": "yarn test:build && jest"
