Upgrade to next 13 (#1294)
Signed-off-by: Jan Potoms <2109932+Janpot@users.noreply.github.com>

--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint && prettier --check .",
     "fix": "next lint --fix && prettier --write .",
     "prisma": "prisma",
-    "build:next": "next build",
+    "build:next": "NODE_OPTIONS=--max-old-space-size=8192 next build",
     "build:react-devtools": "rimraf ./public/reactDevtools && esbuild ./reactDevtools/bootstrap.ts --target=es6 --bundle --outdir=./public/reactDevtools",
     "build:typings": "ts-node ./scripts/typings.ts",
     "build:function-runtime": "rimraf ./src/toolpadDataSources/function/dist && esbuild ./src/toolpadDataSources/function/runtime/index.ts --target=es2020 --bundle --outdir=./src/toolpadDataSources/function/dist",
@@ -81,7 +81,7 @@
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
     "monaco-editor": "0.34.1",
-    "next": "12.2.2",
+    "next": "^13.0.3",
     "node-fetch": "^2.6.7",
     "node-fetch-har": "^1.0.1",
     "path-to-regexp": "^6.2.1",
@@ -130,7 +130,7 @@
     "@types/whatwg-url": "^11.0.0",
     "ajv": "^8.11.0",
     "eslint": "8.27.0",
-    "eslint-config-next": "^12.3.1",
+    "eslint-config-next": "^13.0.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "formidable": "^2.0.1",
