--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-typescript-enum": "^2.1.0",
     "execa": "^6.1.0",
     "format-util": "^1.0.5",
+    "globby": "^13.1.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "lerna": "^6.0.3",
