--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "babel-plugin-transform-rename-import": "^2.3.0",
     "chalk": "^4.1.2",
     "eslint": "^8.27.0",
-    "eslint-config-airbnb-typescript": "12",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-import": "^2.26.0",
@@ -67,6 +68,7 @@
     "eslint-plugin-typescript-enum": "^2.1.0",
     "execa": "^6.1.0",
     "format-util": "^1.0.5",
+    "globby": "^13.1.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "lerna": "^6.0.3",
