--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -81,7 +81,7 @@
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
     "monaco-editor": "0.34.1",
-    "next": "^13.0.5-canary.3",
+    "next": "^13.0.5",
     "node-fetch": "^2.6.7",
     "node-fetch-har": "^1.0.1",
     "path-to-regexp": "^6.2.1",
