--- a/packages/toolpad-app/scripts/tsconfig.json
+++ b/packages/toolpad-app/scripts/tsconfig.json
@@ -5,6 +5,7 @@
     "esModuleInterop": true
   },
   "ts-node": {
-    "swc": true
+    // https://github.com/TypeStrong/ts-node/issues/1915
+    //  "swc": true
   }
 }
