--- a/docs/package.json
+++ b/docs/package.json
@@ -47,7 +47,7 @@
     "clean-css": "^5.3.1",
     "clipboard-copy": "^4.0.1",
     "clsx": "^1.2.1",
-    "core-js": "^2.6.12",
+    "core-js": "^3.26.1",
     "cross-env": "^7.0.3",
     "date-fns-jalali": "^2.29.3-0",
     "doctrine": "^3.0.0",
@@ -81,7 +81,7 @@
     "rimraf": "^3.0.2",
     "styled-components": "^5.3.6",
     "stylis": "^4.1.3",
-    "stylis-plugin-rtl": "^2.1.1",
+    "stylis-plugin-rtl": "npm:stylis-plugin-rtl@^2.1.1",
     "stylis-plugin-rtl-sc": "npm:stylis-plugin-rtl@^2.1.1",
     "webpack-bundle-analyzer": "^4.7.0"
   },
