--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -11,13 +11,13 @@
     "prisma": "prisma",
     "build:next": "NODE_OPTIONS=--max-old-space-size=8192 next build",
     "build:react-devtools": "rimraf ./public/reactDevtools && esbuild ./reactDevtools/bootstrap.ts --target=es6 --bundle --outdir=./public/reactDevtools",
-    "build:typings": "ts-node ./scripts/typings.ts",
+    "build:typings": "ts-node --esm ./scripts/typings.mts",
     "build:function-runtime": "rimraf ./src/toolpadDataSources/function/dist && esbuild ./src/toolpadDataSources/function/runtime/index.ts --target=es2020 --bundle --outdir=./src/toolpadDataSources/function/dist",
     "dev:next": "next dev | pino-pretty",
     "dev:react-devtools": "yarn build:react-devtools --watch",
     "dev:typings": "yarn build:typings",
     "dev:prisma": "prisma generate --watch",
-    "waitForDb": "ts-node ./scripts/waitForDb.ts",
+    "waitForDb": "ts-node --esm ./scripts/waitForDb.mts",
     "dev:function-runtime": "yarn build:function-runtime --watch",
     "waitForApp": "ts-node --esm ./scripts/waitForApp.mts",
     "prisma-detect-drift": "prisma migrate diff --exit-code --from-migrations ./prisma/migrations --to-schema-datamodel ./prisma/schema.prisma --shadow-database-url \"$TOOLPAD_SHADOW_DATABASE_URL\"",
