--- a/packages/toolpad-app/scripts/tsconfig.json
+++ b/packages/toolpad-app/scripts/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "module": "CommonJS",
+    "module": "ES2022",
     "esModuleInterop": true
   },
   "ts-node": {
+    "transpileOnly": true
     // https://github.com/TypeStrong/ts-node/issues/1915
     //  "swc": true
   }
