--- a/packages/toolpad-app/tsconfig.json
+++ b/packages/toolpad-app/tsconfig.json
@@ -31,7 +31,8 @@
     "sentry.server.config.js",
     "**/*.ts",
     "**/*.tsx",
-    "typings/**/*.d.ts"
+    "typings/**/*.d.ts",
+    "scripts/*.mts"
   ],
   "exclude": ["node_modules", "./scripts", "./public"]
 }
