--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -115,6 +115,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/formidable": "^2.0.5",
     "@types/glob": "^8.0.0",
+    "@types/google.accounts": "^0.0.4",
     "@types/grecaptcha": "^3.0.4",
     "@types/har-format": "^1.2.10",
     "@types/invariant": "^2.2.35",
