--- a/render.yaml
+++ b/render.yaml
@@ -16,6 +16,8 @@ services:
       - key: TOOLPAD_ENABLE_CREATE_BY_DOM
         value: null
         previewValue: '1'
+      - key: TOOLPAD_EXPERIMENTAL_GLOBAL_CONNECTIONS
+        value: '1'
       - key: TOOLPAD_DATABASE_URL
         fromDatabase:
           name: toolpad-db
