--- a/package.json
+++ b/package.json
@@ -91,5 +91,8 @@
   "engines": {
     "npm": "please-use-yarn",
     "node": ">=16.17"
+  },
+  "resolutions": {
+    "react-router-dom": "~6.3.0"
   }
 }
