Add Text component to merge Typography, Markdown, Link (#1298)
Co-authored-by: Jan Potoms <2109932+Janpot@users.noreply.github.com>

--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -102,6 +102,7 @@
     "react-is": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-split-pane": "^0.1.92",
+    "remark-gfm": "^3.0.1",
     "serialize-javascript": "^6.0.0",
     "ses": "^0.18.0",
     "sucrase": "^3.29.0",
