--- a/docker/compose/docker-compose.yml
+++ b/docker/compose/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       - TOOLPAD_DATABASE_URL=postgresql://toolpad-app:secretpw@postgres:5432/postgres?connect_timeout=10
       - PORT=3000
-      - EXTERNAL_URL=http://localhost:3000/
+      - TOOLPAD_EXTERNAL_URL=http://localhost:3000/
     ports:
       - '3000:3000'
 
