--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,6 +127,14 @@ jobs:
       - run:
           name: Lint Markdown
           command: yarn markdownlint
+  test_types:
+    <<: *defaults
+    steps:
+      - checkout
+      - install_js
+      - run:
+          name: Check Typescript types
+          command: yarn check-types
   test_static:
     <<: *defaults
     resource_class: medium+
@@ -205,6 +213,9 @@ workflows:
     jobs:
       - checkout
       - test_lint:
+          requires:
+            - checkout
+      - test_types:
           requires:
             - checkout
       - test_static:
