--- a/packages/toolpad-app/tsconfig.json
+++ b/packages/toolpad-app/tsconfig.json
@@ -34,5 +34,6 @@
     "typings/**/*.d.ts",
     "scripts/*.mts"
   ],
-  "exclude": ["node_modules", "./scripts", "./public"]
+  "exclude": ["node_modules", "./scripts", "./public"],
+  "composite": true
 }
