--- a/packages/toolpad-core/tsconfig.json
+++ b/packages/toolpad-core/tsconfig.json
@@ -9,5 +9,6 @@
     "target": "ES2020",
     "skipLibCheck": true
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["**/*.ts", "**/*.tsx"],
+  "composite": true
 }
