--- a/packages/toolpad-app/tsconfig.json
+++ b/packages/toolpad-app/tsconfig.json
@@ -34,6 +34,5 @@
     "typings/**/*.d.ts",
     "scripts/*.mts"
   ],
-  "exclude": ["node_modules", "./scripts", "./public"],
-  "composite": true
+  "exclude": ["node_modules", "./scripts", "./public"]
 }
