--- a/packages/toolpad-core/tsconfig.json
+++ b/packages/toolpad-core/tsconfig.json
@@ -9,6 +9,5 @@
     "target": "ES2020",
     "skipLibCheck": true
   },
-  "include": ["**/*.ts", "**/*.tsx"],
-  "composite": true
+  "include": ["**/*.ts", "**/*.tsx"]
 }
