Root type check (#1510)

--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -29,7 +29,8 @@
     "prebuild": "rimraf dist",
     "build": "tsc",
     "dev": "tsc --pretty --watch --preserveWatchOutput",
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "check-types": "tsc"
   },
   "bugs": {
     "url": "https://github.com/mui/mui-toolpad/issues"
