--- a/packages/toolpad/package.json
+++ b/packages/toolpad/package.json
@@ -4,18 +4,21 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "./index.js",
+    "start": "./index.mjs",
     "dev": "tsc --pretty --watch --preserveWatchOutput"
   },
   "files": [
-    "index.js",
+    "index.mjs",
     "dist"
   ],
   "bin": {
-    "toolpad": "./index.js"
+    "toolpad": "./index.mjs"
   },
   "dependencies": {
-    "@mui/toolpad-app": "^0.0.34"
+    "@mui/toolpad-app": "^0.0.34",
+    "arg": "^5.0.2",
+    "dotenv": "^16.0.3",
+    "execa": "^6.1.0"
   },
   "devDependencies": {}
 }
