--- a/packages/toolpad-components/package.json
+++ b/packages/toolpad-components/package.json
@@ -33,6 +33,8 @@
     "@mui/material": "^5.11.5",
     "@mui/toolpad-core": "^0.0.35",
     "@mui/x-data-grid-pro": "^5.17.19",
+    "@mui/x-date-pickers": "^5.0.14",
+    "dayjs": "^1.11.7",
     "react-markdown": "^8.0.4"
   },
   "devDependencies": {
