--- a/packages/toolpad/package.json
+++ b/packages/toolpad/package.json
@@ -6,7 +6,8 @@
     "build": "tsc",
     "start": "yarn cli",
     "cli": "./index.mjs",
-    "dev": "tsc --pretty --watch --preserveWatchOutput"
+    "dev": "tsc --pretty --watch --preserveWatchOutput",
+    "dev:13": "tsc --pretty --watch --preserveWatchOutput"
   },
   "files": [
     "index.mjs",
