--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -82,6 +82,7 @@
     "markdown-to-jsx": "^7.1.8",
     "mitt": "^3.0.0",
     "monaco-editor": "0.34.1",
+    "mysql2": "^2.3.3",
     "next": "^13.1.4",
     "node-fetch": "^2.6.8",
     "node-fetch-har": "^1.0.1",
