--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -6,7 +6,7 @@
     "build": "yarn prisma generate && concurrently \"yarn:build:*\" && rimraf ./.next/cache",
     "start": "yarn waitForDb && yarn prisma migrate deploy && next start",
     "dev": "yarn prisma generate && yarn waitForDb && yarn prisma db push --skip-generate && concurrently \"yarn:dev:*\"",
-    "dev:13": "concurrently \"yarn:dev:13:*\"",
+    "dev13": "concurrently \"yarn:dev13:*\"",
     "local:start": "TOOLPAD_LOCAL_MODE=1 next start",
     "local:dev": "TOOLPAD_LOCAL_MODE=1 concurrently \"yarn:dev:*\"",
     "lint": "next lint && prettier --check .",
@@ -20,8 +20,8 @@
     "dev:react-devtools": "yarn build:react-devtools --watch",
     "dev:typings": "yarn build:typings",
     "dev:prisma": "prisma generate --watch",
-    "dev:13:react-devtools": "yarn build:react-devtools --watch",
-    "dev:13:typings": "yarn build:typings",
+    "dev13:react-devtools": "yarn build:react-devtools --watch",
+    "dev13:typings": "yarn build:typings",
     "waitForDb": "ts-node --esm ./scripts/waitForDb.mts",
     "dev:function-runtime": "yarn build:function-runtime --watch",
     "waitForApp": "ts-node --esm ./scripts/waitForApp.mts",
