--- a/packages/toolpad-app/tsconfig.json
+++ b/packages/toolpad-app/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
     "paths": {
-      // TODO: remove when we move to typescript 4.7 (supports package exports)
-      "@mui/toolpad-core/runtime": ["../toolpad-core/dist/runtime"],
-      "@mui/toolpad-core/jsRuntime": ["../toolpad-core/dist/jsRuntime"],
-      "@mui/toolpad-core/jsBrowserRuntime": ["../toolpad-core/dist/jsBrowserRuntime"],
-      "@mui/toolpad-core/jsServerRuntime": ["../toolpad-core/dist/jsServerRuntime"],
-      "@mui/toolpad-core/objectKey": ["../toolpad-core/dist/objectKey"],
-      "@mui/toolpad-core/utils/*": ["../toolpad-core/dist/utils/*"]
+      // TODO: remove when typescript module resolution supports package exports. (v5.0 with module: 'bundler' ?)
+      "@mui/toolpad-core": ["../toolpad-core/dist/esm"],
+      "@mui/toolpad-core/runtime": ["../toolpad-core/dist/esm/runtime"],
+      "@mui/toolpad-core/jsRuntime": ["../toolpad-core/dist/esm/jsRuntime"],
+      "@mui/toolpad-core/jsBrowserRuntime": ["../toolpad-core/dist/esm/jsBrowserRuntime"],
+      "@mui/toolpad-core/jsServerRuntime": ["../toolpad-core/dist/esm/jsServerRuntime"],
+      "@mui/toolpad-core/objectKey": ["../toolpad-core/dist/esm/objectKey"],
+      "@mui/toolpad-core/utils/*": ["../toolpad-core/dist/esm/utils/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
