--- a/packages/toolpad-components/tsconfig.json
+++ b/packages/toolpad-components/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "paths": {
-      // TODO: remove when we move to typescript 4.7 (supports package exports)
-      "@mui/toolpad-core/path": ["../toolpad-core/dist/path"],
-      "@mui/toolpad-core/objectKey": ["../toolpad-core/dist/objectKey"]
+      // TODO: remove when typescript module resolution supports package exports. (v5.0 with module: 'bundler' ?)
+      "@mui/toolpad-core": ["../toolpad-core/dist/esm"],
+      "@mui/toolpad-core/path": ["../toolpad-core/dist/esm/path"],
+      "@mui/toolpad-core/objectKey": ["../toolpad-core/dist/esm/objectKey"]
     },
     "module": "esnext",
     "alwaysStrict": true,
