--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -6,17 +6,22 @@
     "build": "yarn prisma generate && concurrently \"yarn:build:*\" && rimraf ./.next/cache",
     "start": "yarn waitForDb && yarn prisma migrate deploy && next start",
     "dev": "yarn prisma generate && yarn waitForDb && yarn prisma db push --skip-generate && concurrently \"yarn:dev:*\"",
+    "dev13": "concurrently \"yarn:dev13:*\"",
+    "local:start": "TOOLPAD_LOCAL_MODE=1 next start",
+    "local:dev": "TOOLPAD_LOCAL_MODE=1 concurrently \"yarn:dev:*\"",
     "lint": "next lint && prettier --check .",
     "fix": "next lint --fix && prettier --write .",
     "prisma": "prisma",
     "build:next": "NODE_OPTIONS=--max-old-space-size=8192 next build",
-    "build:react-devtools": "rimraf ./public/reactDevtools && esbuild ./reactDevtools/bootstrap.ts --target=es6 --bundle --outdir=./public/reactDevtools",
+    "build:react-devtools": "rimraf ./public/reactDevtools && esbuild ./reactDevtools/bootstrap.ts --target=es6 --bundle --format=iife --outdir=./public/reactDevtools",
     "build:typings": "ts-node --esm ./scripts/typings.mts",
     "build:function-runtime": "rimraf ./src/toolpadDataSources/function/dist && esbuild ./src/toolpadDataSources/function/runtime/index.ts --target=es2020 --bundle --outdir=./src/toolpadDataSources/function/dist",
     "dev:next": "next dev | pino-pretty",
     "dev:react-devtools": "yarn build:react-devtools --watch",
     "dev:typings": "yarn build:typings",
     "dev:prisma": "prisma generate --watch",
+    "dev13:react-devtools": "yarn build:react-devtools --watch",
+    "dev13:typings": "yarn build:typings",
     "waitForDb": "ts-node --esm ./scripts/waitForDb.mts",
     "dev:function-runtime": "yarn build:function-runtime --watch",
     "waitForApp": "ts-node --esm ./scripts/waitForApp.mts",
@@ -111,7 +116,8 @@
     "superjson": "^1.12.2",
     "ts-node": "^10.9.1",
     "web-streams-polyfill": "^3.2.1",
-    "whatwg-url": "^12.0.0"
+    "whatwg-url": "^12.0.0",
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@types/babel__code-frame": "^7.0.3",
