--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mui/toolpad-app",
-  "version": "0.0.39-alpha.0",
+  "version": "0.0.39-alpha.3",
   "license": "MIT",
   "scripts": {
     "build": "yarn prisma generate && concurrently \"yarn:build:*\" && rimraf ./.next/cache",
@@ -47,8 +47,8 @@
     "@mui/lab": "^5.0.0-alpha.118",
     "@mui/material": "^5.11.7",
     "@mui/system": "^5.11.7",
-    "@mui/toolpad-components": "^0.0.39-alpha.0",
-    "@mui/toolpad-core": "^0.0.39-alpha.0",
+    "@mui/toolpad-components": "^0.0.39-alpha.3",
+    "@mui/toolpad-core": "^0.0.39-alpha.3",
     "@mui/types": "^7.2.3",
     "@mui/utils": "^5.11.7",
     "@mui/x-data-grid-generator": "^5.17.20",
@@ -152,5 +152,6 @@
   "typings": "./index.d.ts",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "c81485d0bc901a413f221898864ff3421ab33cb8"
 }
