--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -72,6 +72,7 @@
     "csstype": "^3.1.1",
     "cuid": "^3.0.0",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "esbuild": "0.17.6",
     "fastestsmallesttextencoderdecoder": "^1.0.22",
     "find-up": "^6.3.0",
