--- a/packages/toolpad/package.json
+++ b/packages/toolpad/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mui/toolpad",
-  "version": "0.0.39-alpha.0",
+  "version": "0.0.39",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
@@ -17,7 +17,7 @@
     "toolpad": "./index.mjs"
   },
   "dependencies": {
-    "@mui/toolpad-app": "^0.0.39-alpha.0",
+    "@mui/toolpad-app": "^0.0.39",
     "arg": "^5.0.2",
     "dotenv": "^16.0.3",
     "execa": "^6.1.0"
