--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -51,6 +51,11 @@
       "import": "./dist/esm/objectKey.js",
       "require": "./dist/cjs/objectKey.js"
     },
+    "./server": {
+      "types": "./dist/esm/server.d.ts",
+      "import": "./dist/esm/server.js",
+      "require": "./dist/cjs/server.js"
+    },
     "./utils/*": {
       "types": "./dist/esm/utils/*.d.ts",
       "import": "./dist/esm/utils/*.js",
