--- a/packages/toolpad/package.json
+++ b/packages/toolpad/package.json
@@ -3,14 +3,32 @@
   "version": "0.0.40-alpha.1",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
     "start": "yarn cli",
     "cli": "./index.mjs",
-    "dev": "tsc --pretty --watch --preserveWatchOutput",
-    "dev13": "tsc --pretty --watch --preserveWatchOutput"
+    "cjsify": "mkdir -p ./dist/cjs && echo \"{ \\\"type\\\":\\\"commonjs\\\" }\" > ./dist/cjs/package.json",
+    "build": "concurrently \"yarn:build:*\" && yarn cjsify",
+    "build:esm": "tsc",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "dev": "concurrently \"yarn:dev:*\" yarn:cjsify",
+    "dev:esm": "yarn build:esm --pretty --watch --preserveWatchOutput",
+    "dev:cjs": "yarn build:cjs --pretty --watch --preserveWatchOutput",
+    "dev13": "yarn dev"
+  },
+  "exports": {
+    "./package.json": "./package.json",
+    "./server": {
+      "types": "./dist/esm/server.d.ts",
+      "import": "./dist/esm/server.js",
+      "require": "./dist/cjs/server.js"
+    },
+    "./browser": {
+      "types": "./dist/esm/browser.d.ts",
+      "import": "./dist/esm/browser.js",
+      "require": "./dist/cjs/browser.js"
+    }
   },
   "files": [
-    "index.mjs",
+    "index.js",
     "dist"
   ],
   "bin": {
@@ -18,7 +36,9 @@
   },
   "dependencies": {
     "@mui/toolpad-app": "^0.0.40-alpha.1",
+    "@mui/toolpad-core": "^0.0.40-alpha.1",
     "arg": "^5.0.2",
+    "concurrently": "^7.6.0",
     "dotenv": "^16.0.3",
     "execa": "^6.1.0"
   },
