--- a/packages/toolpad-components/package.json
+++ b/packages/toolpad-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mui/toolpad-components",
-  "version": "0.0.40",
+  "version": "0.0.41-alpha.0",
   "description": "Build MUI apps quickly",
   "author": "MUI Toolpad team",
   "homepage": "https://github.com/mui/mui-toolpad#readme",
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@mui/material": "^5.11.8",
-    "@mui/toolpad-core": "^0.0.40",
+    "@mui/toolpad-core": "^0.0.41-alpha.0",
     "@mui/x-data-grid-pro": "^5.17.23",
     "@mui/x-date-pickers": "^5.0.18",
     "dayjs": "^1.11.7",
@@ -47,5 +47,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "b9bc55a942609402e4fad193147a55fddbe94e7c"
+  "gitHead": "545e22b6f45d3947c96f86cec44e8da865df5f50"
 }
