--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mui/toolpad-core",
-  "version": "0.0.40",
+  "version": "0.0.41-alpha.0",
   "description": "Build MUI apps quickly",
   "author": "MUI Toolpad team",
   "homepage": "https://github.com/mui/mui-toolpad#readme",
@@ -89,8 +89,8 @@
     "@tanstack/react-query": "^4.24.4",
     "mitt": "^3.0.0",
     "quickjs-emscripten": "^0.21.1",
-    "react-error-boundary": "^3.1.4",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-error-boundary": "^3.1.4"
   },
   "devDependencies": {
     "concurrently": "^7.6.0"
@@ -101,5 +101,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "b9bc55a942609402e4fad193147a55fddbe94e7c"
+  "gitHead": "545e22b6f45d3947c96f86cec44e8da865df5f50"
 }
