--- a/packages/toolpad/package.json
+++ b/packages/toolpad/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mui/toolpad",
-  "version": "0.0.40",
+  "version": "0.0.41-alpha.0",
   "license": "MIT",
   "scripts": {
     "start": "yarn cli",
@@ -35,12 +35,12 @@
     "toolpad": "./index.mjs"
   },
   "dependencies": {
-    "@mui/toolpad-app": "^0.0.40",
-    "@mui/toolpad-core": "^0.0.40",
+    "@mui/toolpad-app": "^0.0.41-alpha.0",
+    "@mui/toolpad-core": "^0.0.41-alpha.0",
     "arg": "^5.0.2",
     "concurrently": "^7.6.0",
     "dotenv": "^16.0.3",
     "execa": "^7.0.0"
   },
-  "gitHead": "b9bc55a942609402e4fad193147a55fddbe94e7c"
+  "gitHead": "545e22b6f45d3947c96f86cec44e8da865df5f50"
 }
