--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -7,11 +7,12 @@
     "start": "yarn waitForDb && yarn prisma migrate deploy && next start",
     "dev": "yarn prisma generate && yarn waitForDb && yarn prisma db push --skip-generate && concurrently \"yarn:dev:*\"",
     "dev13": "concurrently \"yarn:dev13:*\"",
-    "local:start": "TOOLPAD_LOCAL_MODE=1 next start",
-    "local:dev": "TOOLPAD_LOCAL_MODE=1 next dev",
+    "local:start": "./cli.js start",
+    "local:dev": "./cli.js dev",
     "lint": "next lint && prettier --check .",
     "fix": "next lint --fix && prettier --write .",
     "prisma": "prisma",
+    "build:cli": "tsc -p tsconfig.cli.json",
     "build:next": "NODE_OPTIONS=--max-old-space-size=8192 next build",
     "build:react-devtools": "rimraf ./public/reactDevtools && esbuild ./reactDevtools/bootstrap.ts --target=es6 --bundle --format=iife --outdir=./public/reactDevtools",
     "build:typings": "ts-node --esm ./scripts/typings.mts",
@@ -20,6 +21,7 @@
     "dev:react-devtools": "yarn build:react-devtools --watch",
     "dev:typings": "yarn build:typings",
     "dev:prisma": "prisma generate --watch",
+    "dev13:cli": "yarn build:cli --watch --preserveWatchOutput",
     "dev13:react-devtools": "yarn build:react-devtools --watch",
     "dev13:typings": "yarn build:typings",
     "waitForDb": "ts-node --esm ./scripts/waitForDb.mts",
@@ -32,6 +34,8 @@
     "prisma",
     "public",
     "scripts",
+    "dist",
+    "cli.js",
     ".next"
   ],
   "dependencies": {
@@ -63,6 +67,7 @@
     "@types/cors": "^2.8.13",
     "abort-controller": "^3.0.0",
     "arg": "^5.0.2",
+    "args": "^5.0.3",
     "basic-auth": "^2.0.1",
     "chokidar": "^3.5.3",
     "clsx": "^1.2.1",
