--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -7,8 +7,7 @@
     "start": "yarn waitForDb && yarn prisma migrate deploy && next start",
     "dev": "yarn prisma generate && yarn waitForDb && yarn prisma db push --skip-generate && concurrently \"yarn:dev:*\"",
     "dev13": "concurrently \"yarn:dev13:*\"",
-    "local:start": "./cli.js start",
-    "local:dev": "./cli.js dev",
+    "cli": "./cli.js",
     "lint": "next lint && prettier --check .",
     "fix": "next lint --fix && prettier --write .",
     "prisma": "prisma",
