--- a/packages/toolpad-components/package.json
+++ b/packages/toolpad-components/package.json
@@ -31,7 +31,8 @@
     "url": "https://github.com/mui/mui-toolpad/issues"
   },
   "dependencies": {
-    "@mui/material": "^5.11.9",  "@mui/toolpad-core": "^0.0.41-alpha.0",
+    "@mui/material": "^5.11.9",
+    "@mui/toolpad-core": "^0.0.41-alpha.0",
     "@mui/x-data-grid-pro": "^5.17.24",
     "@mui/x-date-pickers": "^5.0.19",
     "dayjs": "^1.11.7",
