--- a/packages/toolpad-app/tsconfig.json
+++ b/packages/toolpad-app/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "paths": {
-      // TODO: remove when typescript module resolution supports package exports. (v5.0 with module: 'bundler' ?)
+      // TODO: remove when typescript module resolution supports package exports. (v5.0 with moduleResolution: 'bundler')
       "@mui/toolpad-core": ["../toolpad-core/dist/esm"],
       "@mui/toolpad-core/runtime": ["../toolpad-core/dist/esm/runtime"],
       "@mui/toolpad-core/jsRuntime": ["../toolpad-core/dist/esm/jsRuntime"],
