--- a/packages/toolpad-components/package.json
+++ b/packages/toolpad-components/package.json
@@ -36,7 +36,7 @@
     "@mui/x-data-grid-pro": "^5.17.24",
     "@mui/x-date-pickers": "^5.0.19",
     "dayjs": "^1.11.7",
-    "react-markdown": "^8.0.5"
+    "markdown-to-jsx": "^7.1.8"
   },
   "devDependencies": {
     "react": "^18.2.0"
