--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -78,6 +78,7 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "esbuild": "0.17.8",
+    "execa": "^7.0.0",
     "fastestsmallesttextencoderdecoder": "^1.0.22",
     "find-up": "^6.3.0",
     "formdata-polyfill": "^4.0.10",
