--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -83,6 +83,7 @@
     "find-up": "^6.3.0",
     "formdata-polyfill": "^4.0.10",
     "fractional-indexing": "^3.2.0",
+    "get-port": "^6.1.2",
     "headers-polyfill": "^3.1.2",
     "history": "^5.3.0",
     "invariant": "^2.2.4",
