turn off preview environments
Signed-off-by: Jan Potoms <2109932+Janpot@users.noreply.github.com>

--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 # https://render.com/docs/preview-environments
-previewsEnabled: true
+previewsEnabled: false
 previewsExpireAfterDays: 3
 
 services:
