--- a/docs/package.json
+++ b/docs/package.json
@@ -19,18 +19,21 @@
   "dependencies": {
     "@babel/core": "^7.20.12",
     "@babel/plugin-transform-object-assign": "^7.18.6",
+    "@babel/runtime": "^7.21.0",
     "@babel/runtime-corejs2": "^7.20.13",
     "@date-io/date-fns-jalali": "^2.16.0",
     "@docsearch/react": "^3.3.3",
     "@emotion/cache": "^11.10.5",
+    "@emotion/hash": "^0.9.0",
+    "@emotion/is-prop-valid": "^1.2.0",
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.9",
-    "@mui/material": "^5.11.10",
-    "@mui/monorepo": "https://github.com/mui/material-ui.git",
-    "@mui/styles": "^5.11.9",
+    "@mui/monorepo": "https://github.com/mui/material-ui.git#f8fe2bfe36d11cf9f1cb8d4cb437a09caadee6ad",
+    "@mui/private-theming": "^5.11.9",
+    "@mui/types": "^7.2.3",
     "@mui/utils": "^5.11.9",
+    "@popperjs/core": "^2.11.6",
     "@trendmicro/react-interpolate": "^0.5.5",
     "@types/lodash": "^4.14.191",
     "@types/react-dom": "^18.0.11",
@@ -39,6 +42,7 @@
     "address": "^1.2.2",
     "ast-types": "^0.14.2",
     "autoprefixer": "^10.4.13",
+    "babel-plugin-macros": "^3.1.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-optimize-clsx": "^2.6.2",
     "babel-plugin-preval": "^5.1.0",
@@ -48,13 +52,26 @@
     "clipboard-copy": "^4.0.1",
     "clsx": "^1.2.1",
     "core-js": "^2.6.12",
+    "cosmiconfig": "^8.0.0",
     "cross-env": "^7.0.3",
+    "csstype": "^3.1.1",
     "date-fns-jalali": "^2.29.3-0",
     "doctrine": "^3.0.0",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "fg-loadcss": "^3.1.0",
     "fs-extra": "^11.1.0",
+    "hoist-non-react-statics": "^3.3.2",
+    "import-fresh": "^3.3.0",
+    "jss": "^10.10.0",
+    "jss-plugin-camel-case": "^10.10.0",
+    "jss-plugin-default-unit": "^10.10.0",
+    "jss-plugin-global": "^10.10.0",
+    "jss-plugin-nested": "^10.10.0",
+    "jss-plugin-props-sort": "^10.10.0",
+    "jss-plugin-rule-value-function": "^10.10.0",
+    "jss-plugin-template": "^10.10.0",
+    "jss-plugin-vendor-prefixer": "^10.10.0",
     "jss-rtl": "^0.3.0",
     "lodash": "^4.17.21",
     "lz-string": "^1.4.4",
