--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -47,8 +47,8 @@
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.10",
     "@mui/system": "^5.11.9",
-    "@mui/toolpad-components": "^0.0.40",
-    "@mui/toolpad-core": "^0.0.40",
+    "@mui/toolpad-components": "workspace:*",
+    "@mui/toolpad-core": "workspace:*",
     "@mui/types": "^7.2.3",
     "@mui/utils": "^5.11.9",
     "@mui/x-data-grid-generator": "^5.17.24",
