--- a/packages/toolpad/package.json
+++ b/packages/toolpad/package.json
@@ -17,7 +17,7 @@
     "toolpad": "./index.mjs"
   },
   "dependencies": {
-    "@mui/toolpad-app": "^0.0.40",
+    "@mui/toolpad-app": "workspace:*",
     "arg": "^5.0.2",
     "dotenv": "^16.0.3",
     "execa": "^7.0.0"
