--- a/packages/create-toolpad-app/package.json
+++ b/packages/create-toolpad-app/package.json
@@ -27,10 +27,15 @@
     "build": "yarn release"
   },
   "devDependencies": {
+    "@types/execa": "^2.0.0",
+    "@types/inquirer": "9.0.3",
     "@vercel/ncc": "0.34.0",
-    "chalk": "2.4.2"
+    "chalk": "2.4.2",
+    "execa": "^7.0.0",
+    "open": "^8.4.2"
   },
   "engines": {
     "node": ">=14.6.0"
-  }
+  },
+  "dependencies": {}
 }
